[package]
name = "cmd-interface"
version = "0.1.0"
edition = "2021"

[lib]
name = "interface"
#crate-type = ["cdylib"]      # Creates dynamic lib
crate-type = ["staticlib"] # Creates static lib

[dependencies]
nom = {version = "7.1.3", default-features = false}

# cbindgen --config cbindgen.toml --crate cmd-interface --output my_header.h --lang c